[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/aKey.png" type="Texture" id=1]
[ext_resource path="res://Assets/sKey.png" type="Texture" id=2]
[ext_resource path="res://Assets/dKey.png" type="Texture" id=3]
[ext_resource path="res://Assets/wKey.png" type="Texture" id=4]
[ext_resource path="res://Assets/spaceKey.png" type="Texture" id=5]
[ext_resource path="res://tutorial.gd" type="Script" id=6]
[ext_resource path="res://tutorial.tres" type="StyleBox" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.247059, 0.101961, 0.101961, 1 )
border_width_top = 30
border_width_bottom = 30
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Acme-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 100
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Acme-Regular.ttf"

[sub_resource type="DynamicFont" id=5]
size = 160
outline_size = 20
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 10
font_data = SubResource( 4 )

[sub_resource type="Theme" id=6]

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Acme-Regular.ttf"

[sub_resource type="DynamicFont" id=9]
size = 100
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Acme-Regular.ttf"

[sub_resource type="DynamicFont" id=11]
size = 60
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 10 )

[node name="level2" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="Panel" parent="CanvasLayer"]
margin_left = -8.0
margin_right = 1592.0
margin_bottom = 896.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A" type="Sprite" parent="CanvasLayer/Background"]
position = Vector2( 352, 488 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="CanvasLayer/Background"]
margin_left = 320.0
margin_top = 248.0
margin_right = 856.0
margin_bottom = 635.0
custom_fonts/font = SubResource( 3 )
text = "MOVE 

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/Background"]
margin_left = 1048.0
margin_top = 248.0
margin_right = 1280.0
margin_bottom = 895.0
custom_fonts/font = SubResource( 3 )
text = "JUMP


"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameName" type="Label" parent="CanvasLayer/Background"]
margin_left = 352.0
margin_top = 46.0
margin_right = 1240.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.721569, 0.505882, 0.298039, 1 )
text = "CaveXplorer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exitButton" type="Panel" parent="CanvasLayer/Background"]
margin_left = 600.0
margin_top = 664.0
margin_right = 984.0
margin_bottom = 834.0
theme = SubResource( 6 )
custom_styles/panel = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exitText" type="Label" parent="CanvasLayer/Background/exitButton"]
margin_left = 56.0
margin_top = 16.0
margin_right = 344.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 9 )
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="w" type="Sprite" parent="CanvasLayer/Background"]
position = Vector2( 352, 408 )
texture = ExtResource( 4 )

[node name="S" type="Sprite" parent="CanvasLayer/Background"]
position = Vector2( 352, 568 )
texture = ExtResource( 2 )

[node name="D" type="Sprite" parent="CanvasLayer/Background"]
position = Vector2( 352, 648 )
texture = ExtResource( 3 )

[node name="Label3" type="Label" parent="CanvasLayer/Background"]
margin_left = 400.0
margin_top = 368.0
margin_right = 600.0
margin_bottom = 685.0
custom_fonts/font = SubResource( 11 )
text = "Jump
Left
Crouch
Right"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/Background"]
position = Vector2( 1160, 408 )
texture = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="gui_input" from="CanvasLayer/Background/exitButton" to="CanvasLayer/Background" method="_on_exitButton_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/Background/exitButton" to="CanvasLayer/Background" method="_on_exitButton_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Background/exitButton" to="CanvasLayer/Background" method="_on_exitButton_mouse_exited"]
